--- a/css/core.css
+++ b/css/core.css
@@ -1,10 +1,29 @@
-html {
-    background: url('./../img/bg.png') no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
+.headerimg {
+    background: #fff url('../img/bg.png') no-repeat fixed 50% 0;
     background-size: cover;
+    -webkit-background-size: cover;
+    -o-background-size: cover;
+    -moz-background-size: cover;
+    padding: 0;
 }
-body {
-    background: transparent;
+.headertext {
+    margin-top: 20px;
+    position: absolute;
+    float: left;
+    left: 20px;
+    top: 50px;
+    color: #ffffff;
 }
+.menuoffset {
+    padding-top: 45px;
+}
+.faceslider {
+    width: 100%;
+    list-style: none;
+    margin-left: 0;
+    margin-bottom: 0;
+}
+/*.faceslider li {
+    display: inline-block;
+    margin-left: -.33em;
+}*/
