--- a/css/core.css
+++ b/css/core.css
@@ -7,7 +7,6 @@ body {
     -webkit-background-size: cover;
     -o-background-size: cover;
     -moz-background-size: cover;
-    padding: 0;
 }
 .outerheader {
     position: absolute;
@@ -59,15 +58,11 @@ body {
     background: #333333;
     margin-bottom: 0;
 }
-.faceslider {
-    width: 100%;
-    list-style: none;
-    margin-left: 0;
-    margin-bottom: 0;
-    overflow: hidden;
+.sliderdiv {
+    visibility: hidden;
 }
-.faceslider img {
-    width: 3rem;
-    height: 3rem;
-    margin-left: -.33rem;
+.sliderdivouter {
+    background: #333333;
+    height: 64px;
+    width: 100%;
 }
